--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
   <title>Rest Countries API</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="planet-earth-global-svgrepo-com.svg">
+
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
